--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ contourpy==1.3.1
 cryptography==44.0.0
 cssselect2==0.7.0
 cycler==0.12.1
-Flask==3.1.0
+Flask==2.3.3
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
@@ -78,6 +78,7 @@ webencodings==0.5.1
 Werkzeug==3.1.3
 WTForms==3.2.1
 xhtml2pdf==0.2.16
-psycopg2-binary
+psycopg2-binary==2.9.6
+
 
 
